# windows-erg

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: arm64-runtime.yml  ci.yml
examples/: desktop_tray_notification.rs  desktop_windows.rs  etw_decoded_events.rs  etw_multi_provider.rs  etw_network_monitor.rs  etw_process_monitor.rs  etw_registry_monitor.rs  etw_stop_with_wait.rs  etw_user_mode_provider.rs  evt_custom_parsing.rs  evt_filter.rs  evt_query_basic.rs  evt_serde.rs  evt_streaming.rs  pipes_list.rs  process_basics.rs  process_metrics.rs  process_mitigation.rs  process_monitoring.rs  process_spawn_parented.rs  process_tree.rs  process_wait_any.rs  proxy_for_url.rs  proxy_system.rs  raw_file_copy.rs  registry_basics.rs  registry_convenience.rs  registry_enumerate.rs  registry_operations.rs  registry_safe_access.rs  registry_write.rs  security_permissions.rs  service_basics.rs  service_enumerate.rs  system_power_control.rs  system_snapshot.rs  wait_multi_object.rs
src/: error.rs  lib.rs  types.rs
src/desktop/: mod.rs  tray.rs  types.rs  windows.rs
src/etw/: README.md  mod.rs  schema.rs  session.rs  types.rs
src/etw/decode/: events.rs  generic_map.rs  helpers.rs  image.rs  mod.rs  process.rs
src/evt/: mod.rs  query.rs  render.rs  types.rs
src/file/: builder.rs  mod.rs  raw.rs  win.rs
src/mitigation/: mod.rs
src/pipes/: anonymous.rs  client.rs  enumerate.rs  error_map.rs  integration.rs  mod.rs  security_attrs.rs  server.rs  types.rs
src/process/: inject.rs  list.rs  memory.rs  metrics.rs  mod.rs  modules.rs  peb.rs  processes.rs  spawn.rs  threads.rs  tree.rs  types.rs
src/proxy/: mod.rs  types.rs
src/registry/: builder.rs  key.rs  mod.rs  tests.rs  types.rs  values.rs
src/security/: acl.rs  descriptor.rs  editor.rs  mod.rs  rights.rs  sid.rs  target.rs
src/security/backends/: file.rs  mod.rs  registry.rs
src/service/: manager.rs  mod.rs  service.rs  status.rs  types.rs
src/system/: mod.rs  types.rs
src/utils/: handles.rs  mod.rs  strings.rs
src/wait/: mod.rs
tests/: etw_integration.rs  pipes_integration.rs  process_wait_any_integration.rs  raw_file_integration.rs  security_permissions_integration.rs  service_integration.rs
